WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
113339
WebKit does not expose @required or @aria-required as AXRequired on select elements
https://bugs.webkit.org/show_bug.cgi?id=113339
Summary
WebKit does not expose @required or @aria-required as AXRequired on select el...
James Craig
Reported
2013-03-26 14:09:58 PDT
Created
attachment 195157
[details]
test case demonstrating bug WebKit does not expose @required or @aria-required as AXRequired on select elements
Attachments
test case demonstrating bug
(307 bytes, text/html)
2013-03-26 14:09 PDT
,
James Craig
no flags
Details
patch
(5.56 KB, patch)
2013-03-26 16:19 PDT
,
chris fleizach
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2013-03-26 14:10:08 PDT
<
rdar://problem/13509223
>
chris fleizach
Comment 2
2013-03-26 16:19:52 PDT
Created
attachment 195182
[details]
patch
chris fleizach
Comment 3
2013-03-26 16:20:05 PDT
adding tim to help review
Tim Horton
Comment 4
2013-03-26 17:09:28 PDT
Comment on
attachment 195182
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=195182&action=review
> LayoutTests/platform/mac/accessibility/aria-required-popup-button.html:8 > +<div id="group">
Indentation could be better.
chris fleizach
Comment 5
2013-03-26 17:14:01 PDT
http://trac.webkit.org/changeset/146949
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug