WebKit does not expose @required or @aria-required as AXRequired on select elements https://bugs.webkit.org/show_bug.cgi?id=113339

Reviewed by Tim Horton.

Source/WebCore:

Make sure button types can return the AXRequired attribute.

Tests: platform/mac/accessibility/aria-required-popup-button.html

* accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(-[WebAccessibilityObjectWrapper accessibilityAttributeNames]):

LayoutTests:

* platform/mac/accessibility/aria-required-popup-button-expected.txt: Added.
* platform/mac/accessibility/aria-required-popup-button.html: Added.



Canonical link: https://commits.webkit.org/131694@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@146949 268f45cc-cd09-0410-ab3c-d52691b4dbfc